@@ -53,7 +53,11 @@ AC_FUNC_STRTOD
 AC_HEADER_TIME
 AC_STRUCT_TM
 
-LIBS="$LIBS -lm"
+AC_CHECK_LIB(m,pow)
+AC_CHECK_LIB(sunmath,acosl)
+
+AC_CHECK_FUNCS([round])
+
 CFLAGS=-Wall
 
 # Checks for header files.
