@@ -1,5 +1,10 @@
 ChangeLog
 
+20090323
+	Fixed issues while compling on Sun/Solaris (acosl, round, ..)
+
+	Petr Kubanek
+
 *********** release of 0.12.3
 
 20090114
